--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Hi! I'm Raiyan Siddique</h2>
-							<p>I am an Electrical, Computer, and Software Engineering Student</p>
+							<p>I am a Software and FPGA Engineer</p>
 						</div>
 					</section>
 
@@ -56,7 +56,7 @@
 									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>I am an Electrical and Computer Engineering major at the Franklin W. Olin College of Engineering. My current interests are in FPGA Engineering and Hardware Acclerators for Neural Networks. Through my time at Olin, I have had the opportunity to work on various Electrical, Computer, Software and Integrated Engineering projects. </p>
+										<p>I am a Staff Software Engineering at Applied Physical Sciencies Corp. My current research interests are in Neuromorphic Computing and Brain-Inspired Machine Learnign Systems.</p>
 										<a href="resume.html" class="special">View My Resume</a>
 									</div>
 								</div>
@@ -119,10 +119,6 @@
 					<div class="inner">
 						<h2 class="major">Contact Information</h2>
 						<ul class="contact">
-							<li class="icon solid fa-home">
-								3505 Sunflower St<br />
-								Norman, OK 73072
-							</li>
 							<li class="icon solid fa-phone">(405) 326-8578</li>
 							<li class="icon solid fa-envelope"><a href="#">rsiddique@olin.edu</a></li>
 							<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/raiyan-siddique-623691222">https://www.linkedin.com/in/raiyan-siddique-623691222/</a></li>
