--- a/resume.html
+++ b/resume.html
@@ -52,65 +52,58 @@
 
 									<h1>Education</h1>
 									<p>OLIN COLLEGE OF ENGINEERING, NEEDHAM, MA<br>MAY 2025</p>
-									<p><strong>Bachelor of Science in Electrical and Computer Engineering</strong><br>GPA: 4.0</p>
-									<p><em>Related Coursework:</em> Software Design, Modeling and Simulation of the Physical World, Introduction Sensors, Instrumentation and Measurement, Data Structures and Algorithms, Discrete Math, Principles of Integrated Engineering, Quantitative Engineering Analysis, Computer Architecture, Introduction to Microelectronic Circuits, Software Systems, Mixed Analog Digital VLSI, Computational Introduction to Robotics, Analog Digital Communications</p>
+									<p><strong>Bachelor of Science in Electrical and Computer Engineering</strong><br>GPA: 3.92</p>
 									<h1>Skills</h1>
 									<p>Python, C/C++, Flutter, Node.js, Amazon Web Services, MATLAB, HTML, CSS, SQL, SOLIDWORKS, LabVIEW, GO, SystemVerilog, VHDL, Vivado, Linux, ROS</p>
 									<h1>Experience</h1>
-									<h2>TEACHING ASSISTANT FOR NEUROTECHNOLOGY AT OLIN</h2>
-									<p>AUGUST 2023-CURRENT</p>
+									<h2>STAFF SOFTWARE ENGINEER AT APPLIED PHYSICAL SCIENCES</h2>
+									<p>SEPTEMBER 2025-PRESENT</p>
 									<ul>
-									  <li>Assisting Olin's Neurotechnology course, which includes helping teach machine learning concepts
-									</li>
+									  <li>Developing firmware and simulation software for large-scale underwater signal processing systems</li>
+									  <li>Designing low-power hardware systems for operation in resource-constrained environments.</li>
 									</ul>
-									<h2>ENGINEERING INTERN, NORTHROP GRUMMAN</h2>
-									<p>MAY-JULY 2023</p>
+									<h2>RESEARCHER AT NICS LABORATORY AT UNIVERSITY OF OKLAHOMA</h2>
+									<p>AUGUST 2023-PRESENT</p>
 									<ul>
-									  <li>Designed and implemented flash memory and register reading functionality on FPGAs for programming Digital Phase Locked Loops across different proprietary printed circuit boards</li>
-									  <li>Tested, verified and troubleshooted various components on proprietary PCBs</li>
-									  <li>Leveraged the I2C protocol on FPGAs in scripts to clear all the non-volatile memory on PCBs</li>
+									  <li>Published and presented IEEE paper on analog neuron design optimization for Low-Power and High-Speed Neuromorphic Computing Systems</li>
+									  <li>Designing experiments for analog neurons in 22nm CMOS and 7nm FinFET to identify optimal operating conditions for minimizing power consumption while maintaining biological fidelity</li>
+									  <li>Developed mathematical and computational models for diverse spiking-neuron frameworks using continuous-time ODE systems to analyze stability, bifurcations, and analog neuron dynamics</li>
 									</ul>
-									<h2>RESEARCHER, OCCAM LABORATORY AT OLIN</h2>
+									<h2>TEACHING ASSISTANT AT OLIN COLLEGE</h2>
+									<p>AUGUST 2023-MAY 2025</p>
+									<ul>
+									  <li>Teaching assistant for Machine Learning, Computer Architecture and Neurotechnology at Olin</li>
+									  <li>Designed the entrepreneurship components of the Microbial Diversity course at Olin</li>
+									</ul>
+									<h2>SIGNAL PROCESSING INTERN AT APPLIED PHYSICAL SCIENCES</h2>
+									<p>MAY-DECEMBER 2024</p>
+									<ul>
+									  <li>Designed and simulated underwater signal receive chain for large-scale FPGA systems</li>
+									  <li>Implemented and optimized advanced filtering and detection techniques in VHDL achieving ~25% reduction in memory usage and significant improvements in computation speed</li>
+									</ul>
+									<h2>RESEARCHER AT OCCAM LABORATORY AT OLIN</h2>
 									<p>JANUARY 2022-MAY 2023</p>
 									<ul>
-									  <li>Used and tested Graph based Simultaneous Localization and Mapping (SLAM) algorithms for invisible mapping in Clew, which is an assistive app for the blind</li>
-									  <li>Using sparse bundle adjustment to improve the accuracy and speed of AprilTag detection</li>
+									  <li>Implemented and tested Graph based Simultaneous Localization and Mapping (SLAM) algorithms for invisible mapping in Clew, which is an assistive app for the blind</li>
+									  <li>Improved accuracy and speed of AprilTag detection using sparse bundle adjustment</li>
+									  <li>Predicted paths in dynamic environments by applying particle filters to measurements from phones</li>
 									</ul>
-									<h2>FULLSTACK DEVELOPER, GLIDEPAY LLC</h2>
-									<p>MAY 2022-APRIL 2023</p>
+									<h1>Activities and Projects</h1>
+									<h2>ENGINEER FOR SENIOR CAPSTONE PROJECT FOR PFIZER</h2>
 									<ul>
-									  <li>Developing Google extension that enables cryptocurrency payments on online retailers</li>
-									  <li>Created backend system using AWS Lambda and Step Functions that liquidates cryptocurrency, places orders on E-Commerce sites and stores order information in relational database</li>
+									  <li>Developed an LLM-based tool using RAG for Pfizer's Global Clinical Supply (GCS) team to analyze large datasets, assess risks, and optimize clinical trial supply chain processes</li>
+									  <li>Redesigned GCS data frameworks to support consistent, scalable dataset use across teams and improve integration with AI-driven tools</li>
 									</ul>
-									<h2>RESEARCHER, SCHLUMBERGER AT UNIVERSITY OF OKLAHOMA</h2>
-									<p>JUNE-AUGUST 2022</p>
+									<h2>FPGA PROGRAMMING/ANALOG CIRCUITRY</h2>
 									<ul>
-									  <li>Tested damaged O-rings when sealing by recording data under high pressures and temperatures using a DAQ system and analyzed the data to determine leak rates</li>
+									  <li>Designed and implemented parts of Tensor Processing Units and neural networks onto FPGAs</li>
+									  <li>Designed and implemented Multicycle and Pipelined RISC-V CPU on FPGAs</li>
 									</ul>
-									<h2>RESEARCHER, HUMAN AUGMENTATION LABORATORY AT OLIN</h2>
-									<p>JANUARY-MAY 2022</p>
+									<h1>Publications</h1>
 									<ul>
-									  <li>Developed a mixed reality application using Magic Leap and Unity</li>
-									  <li>Used k-nearest neighbor algorithm to classify live EMG signals from one’s arm to manipulate controls and change visual stimulus in the Magic Leap device</li>
+									  <li>Siddique, R., Eftimie, M., & Banad, Y. M. (2024). A comparative analysis of neuromorphic neuron circuits for enhanced power efficiency and spiking frequency in 22nm CMOS technology. 2024 IEEE 67th International Midwest Symposium on Circuits and Systems (MWSCAS), Springfield, MA, USA.</li>
+									  <li>Ruvolo, P., Chakraborty, A., Dave, R., Li, R., Mazza, D., Shen, X., ... & Suresh, K. (2023). The Invisible Map: Visual-Inertial SLAM with Fiducial Markers for Smartphone-based Indoor Navigation. arXiv:2310.10862.</li>
 									</ul>
-									<h1>Activities and Interests</h1>
-									<h2>MEMBER, OLIN ROCKETRY</h2>
-									<ul>
-									  <li>Working to create a solid fuel engine for a functioning rocket</li>
-									  <li>Using DAQ system and varying sensors, such as pressure transducer and strain gauge, to acquire data on the propulsion system</li>
-									  </ul>
-									  <h2>MEMBER, HUMAN INTERACTION ROBOTICS AT OLIN</h2>
-									  <ul>
-										<li>Worked with Machine Learning Algorithms, Computer Vision and Robot Operating Systems to manipulate Universal Robot 5</li>
-										<li>Programmed UR5 robot to play Hasbro’s Perfection Game by implementing OpenCV and ROS in python to classify and place shapes</li>
-										<li>Working to implement social navigation frameworks on a TurtleBot3</li>
-										</ul>
-										<h2>FPGA PROGRAMMING/ANALOG CIRCUITRY</h2>
-										<ul>
-										  <li>Built functioning EKG, ballistocardiogram, blood pressure monitor and pulse oximeter using RC filters and operational amplifiers</li>
-										  <li>Designed finite state machines and implemented them onto FPGAs</li>
-										  <li>Designed Multicycle and Pipelined RISC-V CPU using System Verilog</li>
-										  </ul>
 								</div>
 							</div>
 
@@ -121,12 +114,8 @@
 						<div class="inner">
 							<h2 class="major">Contact Information</h2>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									3505 Sunflower St<br />
-									Norman, OK 73072
-								</li>
 								<li class="icon solid fa-phone">(405) 326-8578</li>
-								<li class="icon solid fa-envelope"><a href="#">rsiddique@olin.edu</a></li>
+								<li class="icon solid fa-envelope"><a href="#">raiyan.siddique@outlook.com</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/raiyan-siddique-623691222/">https://www.linkedin.com/in/raiyan-siddique-623691222/</a></li>
 							</ul>
 							<ul class="copyright">
